--- a/css/app.css
+++ b/css/app.css
@@ -1,20 +1,3 @@
-html .header {
-  zoom: 1; }
-  html .header:before {
-    content: "\0020";
-    display: block;
-    height: 0;
-    overflow: hidden; }
-  html .header:after {
-    content: "\0020";
-    display: block;
-    height: 0;
-    overflow: hidden;
-    clear: both; }
-
-* {
-  box-sizing: border-box; }
-
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
   margin: 0;
   padding: 0;
@@ -24,8 +7,30 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   font-style: inherit;
   font-family: inherit;
   font-size: 100%;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+  color: white;
+
+}
 
 body {
-  background: #000 url('bg.png');
+    width: 60%;
+    padding-top: 5%;
+    margin: 0 auto;  background: #000 url('../bg.png');
+    font-family: 'Helvetica Neue', Helvetica, sans-serif;
 }
+
+header { margin-bottom: 10px; }
+header .title { font-size: 2.1em; border-bottom: 2px solid;}
+
+a, a:visited { text-decoration: none; }
+
+/*#social-links { text-align: center; }*/
+
+#social-links li {
+    display: inline-block;
+    margin-right: 20px;
+    font-size: 25px;
+}
+
+.fa {  color: white; transition: all 2.5 ease; }
+.fa:hover { color: gray; }
