--- a/css/app.css
+++ b/css/app.css
@@ -9,13 +9,15 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   font-size: 100%;
   vertical-align: baseline;
   color: white;
-
 }
+
+html { background: #333333 url('../bg.png'); }
 
 body {
     width: 60%;
     padding-top: 5%;
-    margin: 0 auto;  background: #000 url('../bg.png');
+    margin: 0 auto; 
+    
     font-family: 'Helvetica Neue', Helvetica, sans-serif;
 }
 
@@ -24,13 +26,10 @@ header .title { font-size: 2.1em; border-bottom: 2px solid;}
 
 a, a:visited { text-decoration: none; }
 
-/*#social-links { text-align: center; }*/
-
 #social-links li {
     display: inline-block;
     margin-right: 20px;
     font-size: 25px;
 }
 
-.fa {  color: white; transition: all 2.5 ease; }
 .fa:hover { color: gray; }
